--- a/index.html
+++ b/index.html
@@ -17,5 +17,34 @@
         <h2 class="h2-pt1">2 rue de Viarmes,</h2>
         <h2 class="h2-pt2">75001 Paris</h2>
     </div>
+    <div class="history">
+        <h2 class="history--title">
+            Un peu d'histoire...
+        </h2>
+        <div class="history--content">
+
+            <!-- visual elements -->
+            <div class="history--content--circle__1"></div>
+            <div class="history--content--circle__2"></div>
+            <div class="history--content--circle__3"></div>
+            <div class="history--content--line"></div>
+            <img class="history--content--arrow-end" src="./img/down-arrow.svg" alt="flèche"></img>
+
+            <!-- history subtitles and texts -->
+            <h2 class="history--content--subtitle">Moyen-âge</h2>
+            <h2 class="history--content--subtitle">XIXe siècle</h2>
+            <h2 class="history--content--subtitle">2016</h2>
+
+            <p class="history--content--text">
+                L’histoire de cet étonnant monument remonte au Moyen Âge. Il s’agit d’un hôtel particulier transmis en héritage à Saint Louis, qui voit plusieurs générations de Capétiens se succéder.
+            </p>
+            <p class="history--content--text">
+                Dans le courant du XIXe, l’activité de la Halle au Blé décline et un nouvel incendie la ravage en 1854. Sa fermeture est décidée par la Chambre de Commerce de Paris qui choisit de la transformer en Bourse de Commerce en 1885.
+            </p>
+            <p class="history--content--text">
+                En 2016, la Chambre de Commerce annonce son départ et cède le lieu à la Ville de Paris à François Pinault, homme d’affaires et grand collectionneur. Celui-ci entreprend de restaurer le bâtiment pour en faire un lieu dédié à l’art contemporain.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
