Ajout de la page expositions et parralx du background

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/kpg2hji.css">
+    <script src="./js/app.js" defer></script>
     <title>Bourse de Commerce</title>
 </head>
 <body>
+    <div class="background"></div>
     <img class="scroll-arrow" src="./img/down-arrow.svg" alt="down arrow">
     <div class="home-screen">
         <h1>Bourse de<br>
@@ -31,9 +33,9 @@
             <img class="history--content--arrow-end" src="./img/down-arrow.svg" alt="flèche"></img>
 
             <!-- history subtitles and texts -->
-            <h2 class="history--content--subtitle">Moyen-âge</h2>
-            <h2 class="history--content--subtitle">XIXe siècle</h2>
-            <h2 class="history--content--subtitle">2016</h2>
+            <h3 class="history--content--subtitle">Moyen-âge</h3>
+            <h3 class="history--content--subtitle">XIXe siècle</h3>
+            <h3 class="history--content--subtitle">2016</h3>
 
             <p class="history--content--text">
                 L’histoire de cet étonnant monument remonte au Moyen Âge. Il s’agit d’un hôtel particulier transmis en héritage à Saint Louis, qui voit plusieurs générations de Capétiens se succéder.
@@ -44,6 +46,39 @@
             <p class="history--content--text">
                 En 2016, la Chambre de Commerce annonce son départ et cède le lieu à la Ville de Paris à François Pinault, homme d’affaires et grand collectionneur. Celui-ci entreprend de restaurer le bâtiment pour en faire un lieu dédié à l’art contemporain.
             </p>
+        </div>
+    </div>
+    <div class="expositions">
+        <h2>Les expositions</h2>
+        <div class="expositions-container">
+            <div class="exposition">
+                <h3>OPERA (QM.15), 2016</h3>
+                <p>
+                    DOMINIQUE GONZALEZ-FOERSTER <br>
+                    jusqu’au 2 janvier 2023
+                </p>
+            </div>
+            <div class="exposition">
+                <h3>« UNE SECONDE D'ÉTERNITÉ »</h3>
+                <p>
+                    DOMINIQUE GONZALEZ-FOERSTER <br>
+                    jusqu’au 9 janvier 2023
+                </p>
+            </div>
+            <div class="exposition">
+                <h3>« AT DUSK »</h3>
+                <p>
+                    BORIS MIKHAÏLOV <br>
+                    jusqu’au 16 janvier 2023
+                </p>
+            </div>
+            <div class="exposition">
+                <h3>« AVANT L'ORAGE »</h3>
+                <p>
+                    Lucas Arruda <br>
+                    du 8 février au 11 sptembre 2023
+                </p>
+            </div>
         </div>
     </div>
 </body>
