--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="background"></div>
-    <img class="scroll-arrow" src="./img/down-arrow.svg" alt="down arrow">
     <div class="home-screen">
         <h1>Bourse de<br>
             Commerce</h1>
         <div class="decorative-div"></div>
+        <img src="./img/bg-image.webp" alt="photo de l'intérieur de la Bourse du Commerce" class="mobile-image">
         <h2 class="h2-pt1">2 rue de Viarmes,</h2>
         <h2 class="h2-pt2">75001 Paris</h2>
     </div>
@@ -33,17 +33,17 @@
             <img class="history--content--arrow-end" src="./img/down-arrow.svg" alt="flèche"></img>
 
             <!-- history subtitles and texts -->
-            <h3 class="history--content--subtitle">Moyen-âge</h3>
-            <h3 class="history--content--subtitle">XIXe siècle</h3>
-            <h3 class="history--content--subtitle">2016</h3>
+            <h3 class="history--content--subtitle subtitle1">Moyen-âge</h3>
+            <h3 class="history--content--subtitle subtitle2">XIXe siècle</h3>
+            <h3 class="history--content--subtitle subtitle3">2016</h3>
 
-            <p class="history--content--text">
+            <p class="history--content--text text1">
                 L’histoire de cet étonnant monument remonte au Moyen Âge. Il s’agit d’un hôtel particulier transmis en héritage à Saint Louis, qui voit plusieurs générations de Capétiens se succéder.
             </p>
-            <p class="history--content--text">
+            <p class="history--content--text text2">
                 Dans le courant du XIXe, l’activité de la Halle au Blé décline et un nouvel incendie la ravage en 1854. Sa fermeture est décidée par la Chambre de Commerce de Paris qui choisit de la transformer en Bourse de Commerce en 1885.
             </p>
-            <p class="history--content--text">
+            <p class="history--content--text text3">
                 En 2016, la Chambre de Commerce annonce son départ et cède le lieu à la Ville de Paris à François Pinault, homme d’affaires et grand collectionneur. Celui-ci entreprend de restaurer le bâtiment pour en faire un lieu dédié à l’art contemporain.
             </p>
         </div>
