Ajout de la page sources

--- a/sources.html
+++ b/sources.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="https://use.typekit.net/kpg2hji.css">
     <title>Bourse de Commerce - Sources</title>
 </head>
-<body>
+<body class="pageSources">
     <main>
+        <a href="./index.html"> &lt Retour à l'écran principal</a>
+        <h1>Les sources :</h1>
+        <ul>
+            <li><a href="https://www.jaimemonpatrimoine.fr/fr/module/81/1914/la-bourse-de-commerce-de-paris-une-longue-histoire" target="_blank">J'm mon patrimoine</a></li>
+            <li><a href="https://www.pinaultcollection.com/fr/boursedecommerce" target="_blank">Bourse de Commerce - Pinault Collection</a></li>
+        </ul>
     </main>
     <footer>
         <ul>
